WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237179
[libpas] Suppress cast-align warnings
https://bugs.webkit.org/show_bug.cgi?id=237179
Summary
[libpas] Suppress cast-align warnings
Basuke Suzuki
Reported
2022-02-24 20:21:02 PST
There are tons of cast-align warnings while compiling libpas.
Attachments
PATCH
(24.79 KB, patch)
2022-02-25 14:23 PST
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
PATCH
(1.87 KB, patch)
2022-02-25 17:20 PST
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2022-02-24 20:22:58 PST
Initially I've added -Wno-cast-align compiler flags on bmalloc build, but the headers are also indirectly used in WTF. Disabling that warning in entire WTF doesn't seems a good idea.
Radar WebKit Bug Importer
Comment 2
2022-02-25 09:58:05 PST
<
rdar://problem/89479570
>
Basuke Suzuki
Comment 3
2022-02-25 14:23:52 PST
Created
attachment 453262
[details]
PATCH
Basuke Suzuki
Comment 4
2022-02-25 15:15:33 PST
This patch works, but it's too busy to put the macro into every occurrence. I think it's okay to put the macro to wrap entire code except the one in the macro usage. I believe libpas is carefully written for the situation this warning describes.
Basuke Suzuki
Comment 5
2022-02-25 17:20:54 PST
Created
attachment 453280
[details]
PATCH
Basuke Suzuki
Comment 6
2022-02-25 17:22:00 PST
After discussing with Yusuke, I've decided to follow the treatment of `missing-field-initializers` warning.
Yusuke Suzuki
Comment 7
2022-02-25 17:40:53 PST
Comment on
attachment 453280
[details]
PATCH r=me
EWS
Comment 8
2022-02-25 20:00:46 PST
Committed
r290541
(
247819@main
): <
https://commits.webkit.org/247819@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 453280
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug