[libpas] Suppress cast-align warnings https://bugs.webkit.org/show_bug.cgi?id=237179 <rdar://problem/89479570>

Reviewed by Yusuke Suzuki.

Ignore cast-align warnings for libpas target.

* CMakeLists.txt:
* libpas/src/libpas/bmalloc_heap_inlines.h:



Canonical link: https://commits.webkit.org/247819@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290541 268f45cc-cd09-0410-ab3c-d52691b4dbfc