Source/bmalloc/libpas/src/libpas/bmalloc_heap_inlines.h
@@ -29,6 +29,7 @@
 #include "pas_platform.h"
 
 PAS_IGNORE_WARNINGS_BEGIN("missing-field-initializers")
+PAS_IGNORE_WARNINGS_BEGIN("cast-align")
 
 #include "bmalloc_heap.h"
 #include "bmalloc_heap_config.h"
@@ -576,6 +577,7 @@ PAS_END_EXTERN_C;
 
 #endif /* PAS_ENABLE_BMALLOC */
 
+PAS_IGNORE_WARNINGS_END
 PAS_IGNORE_WARNINGS_END
 
 #endif /* BMALLOC_HEAP_INLINES_H */
